primeira section app

--- a/app-calculadora/www/index.html
+++ b/app-calculadora/www/index.html
@@ -12,6 +12,31 @@
 </head>
 <body>
 	
+	<section>
+		<h2 class="superior"></h2>
+		<h1 class="inferior"></h1>
+		<ul>
+			<li class="c">C</li>
+			<li class="inverter_sinal">+/-</li>
+			<li class="operacao">%</li>
+			<li class="operacao">÷</li>
+			<li class="numero">7</li>
+			<li class="numero">8</li>
+			<li class="numero">9</li>
+			<li class="operacao">x</li>
+			<li class="numero">4</li>
+			<li class="numero">5</li>
+			<li class="numero">6</li>
+			<li class="operacao">-</li>
+			<li class="numero">1</li>
+			<li class="numero">2</li>
+			<li class="numero">3</li>
+			<li class="operacao">+</li>
+			<li class="zero numero">0</li>
+			<li class="numero">.</li>
+			<li class="igual">=</li>
+		</ul>
+	</section>
 
 <script src="js/jquery.js"></script>
 <script>
