adicionado variaveis jquery

--- a/app-calculadora/www/index.html
+++ b/app-calculadora/www/index.html
@@ -23,7 +23,7 @@
 			<li class="numero">7</li>
 			<li class="numero">8</li>
 			<li class="numero">9</li>
-			<li class="operacao">x</li>
+			<li class="operacao">xx</li>
 			<li class="numero">4</li>
 			<li class="numero">5</li>
 			<li class="numero">6</li>
@@ -41,7 +41,11 @@
 <script src="js/jquery.js"></script>
 <script>
 	
-	
+	var numero = $(".numero");
+	var operacao = $(".operacao");
+	var igual = $(".igual");
+	var c = $(".c")
+	var inverter_sinal = $(".inverter_sinal")
 
 </script>
 </body>
