adicionado mais variaveis

--- a/app-calculadora/www/index.html
+++ b/app-calculadora/www/index.html
@@ -47,6 +47,10 @@
 	var c = $(".c")
 	var inverter_sinal = $(".inverter_sinal")
 
+	var valor_1 = "";
+	var valor_2 = "";
+	var valor_operacao = null;
+
 </script>
 </body>
 </html>
