adicionado funcao limpar

--- a/app-calculadora/www/index.html
+++ b/app-calculadora/www/index.html
@@ -131,6 +131,16 @@
 
 	});
 
+	c.on("click", function(){
+
+		valor_1="";
+		valor_2="";
+		valor_operacao=null;
+		$(".superior").text("");
+		$(".inferior").text("");
+
+	});
+
 </script>
 </body>
 </html>
