--- a/app-calculadora/www/index.html
+++ b/app-calculadora/www/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Calculadora Welliton</title>
+  <title>Calculadora</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
   <meta name="author" content="">
@@ -23,7 +23,7 @@
 			<li class="numero">7</li>
 			<li class="numero">8</li>
 			<li class="numero">9</li>
-			<li class="operacao">xx</li>
+			<li class="operacao">x</li>
 			<li class="numero">4</li>
 			<li class="numero">5</li>
 			<li class="numero">6</li>
